src/objects/Comment__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Copied_To_FeedItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatterにコピー済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ゲスト</label>
        <referenceTo>Guest__c</referenceTo>
        <relationshipLabel>コメント</relationshipLabel>
        <relationshipName>Comment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>セッション</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>コメント</relationshipLabel>
        <relationshipName>Comment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>コメント</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>CMT-{00000000}</displayFormat>
        <label>コメント番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>